--- a/pinnacle 2/index.html
+++ b/pinnacle 2/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div id="weather-dashboard">
-    <h1>Weather Pulse</h1>
+    <h1>Weather with Megharaj</h1>
     <div class="search-container">
       <input type="text" id="city-input" placeholder="Enter city name">
       <button onclick="fetchWeather()">
